dashboard height issue on mobile fixed with media query

--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -140,4 +140,10 @@ button p {
   font-size: 2.5rem;
   color: #336666; }
 
+/*----------------------------------- MEDIA QUERIES */
+@media screen and (max-width: 768px) {
+  /*phones*/
+  .dashboard {
+    height: 100%; } }
+
 /*# sourceMappingURL=main.css.map */
