--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -190,3 +190,11 @@ button p {
     font-size: 2.5rem;
     color: $dark-blue;
 }
+
+/*----------------------------------- MEDIA QUERIES */
+
+@media screen and (max-width: 768px){ /*phones*/
+    .dashboard {
+        height: 100%;
+    }
+}
